Changed instructions headings and fixed scrollbar bug

--- a/src/mini-apps/yin_yang_coin/yin_yang_coin_styles.css
+++ b/src/mini-apps/yin_yang_coin/yin_yang_coin_styles.css
@@ -14,6 +14,7 @@ body {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    overflow: hidden;   /*  No scrollbars   */
 }
 
 h1 {
